# lang

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
example/: a  b  c
examples/: e  f  g  i  j
lang1/: Cargo.toml
lang1/examples/: a  d  e  h  k
lang1/src/: lib.rs  main.rs
lang1/src/parser/: mod.rs
lang1/tests/: examples.rs
lang2/: .gitignore  Cargo.toml  README.md  a.wat  wasm2wat.sh
lang2/src/: main.rs
lang2/src/ast/: expression.rs  mod.rs
lang2/src/backend/llvm/: compiler.rs  link.rs  target.rs
lang2/src/backend/llvm/codegen/: codegen.rs
lang2/src/compiler/: compiler.rs  mod.rs
lang2/src/parser/: parser.rs
src/: lib.rs  main.rs
src/ast/: expression.rs
src/backend/: mod.rs
src/backend/llvm/: link.rs  mod.rs  target.rs
src/backend/llvm/codegen/: calc.rs  codegen.rs  mod.rs
src/backend/llvm/inkwell_example/: getelementptr.rs  hello_world.rs  if_else.rs  loop_example.rs  mod.rs  module_example.rs
src/backend/mlir/: codegen.rs  mod.rs
src/backend/mlir/example/: .gitignore  compile.sh  execve.mlir  for.mlir  hello.mlir  link-mlir-lib.sh  mlir_c_api.mlir  run_mlir_c_api.sh  sub.mlir
src/backend/mlir/melior_example/: hello_world.rs  inkwell.rs  mod.rs  print.rs  sub_module.rs
src/compiler/: compiler.rs  hir_to_mlir.rs  mod.rs  repl.rs  repl_mlir.rs
src/evaluator/: evaluator.rs  mod.rs
src/hir/: converter.rs  hir.rs  mod.rs  pass.rs  type_inference.rs  types.rs
src/parser/: element.rs  eval_parser.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs
tests/: examples.rs
(+6 files in other folders)
