[package]
name = "lang2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
melior = { version = "0.21.0", features = ["ods-dialects"] }
mlir-sys = "0.4.1"
